--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -45,123 +45,21 @@
     // }
 }
 
-.menu-button {
-    display: inline-flex;
-    margin-right: 0;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 0;
-    border: none;
-    background-color: transparent;
-    z-index: 1000;
-    
-
-    &:hover,
-    &:focus {
-        fill: var(--accent-cl);
-    }
-
-    @include mq(tablet) {
-        display: none;
-        
-    }
-    
-    @include mq(desktop) {
-        
-    }
-}
-
-.menu-button .icon-close {
-    display: none;
-    
-}
-
-.menu-button.is-open .icon-close {
-    display: block;
-}
-
-.menu-button.is-open .icon-menu {
-    display: none;
-}
-
-.menu-container {
-    // display: none;
-
-    
-    
-    // top: 100%;
-    // left: 0;
-    // width: 100%;
-    background-color: #ffffff;
-    
-
-    // 
-    padding: 48px 40px;
-    text-align: center;
-    
-    
-
-    z-index: 10;
-
-    @include mq(mobile-only) {
-        display: none;
-        // position: absolute;
-        position: fixed;
-        height: 100vh;
-        top: 0;
-        left: 0;
-        width: 100%;
-        
-
-        &.is-open {
-            display: block;
-        }
-        
-        
-    }
-
-    @include mq(tablet) {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0;
-        flex-grow: 1;
-        
-    }
-    
-    @include mq(desktop) {
-       align-items: baseline;
-    }
-
-    // z-index: 999;
-
-}
-
 /* Site Nav */
 
 .site-nav {
-    // display: block;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    // margin: 0;
-    // padding: 0;
-    // padding-top: 48px;
-    // height: auto;
-
-    // outline: 1px solid palevioletred;
 
     @include mq(tablet) {
        display: flex;
        flex-direction: row;
        padding: 0;
     
-       align-items: baseline;
+    //    align-items: baseline;
        margin-left: 88px;
     }
     
     @include mq(desktop) {
-        display: flex;
+        // display: flex;
         margin-left: 93px;
        
     }
@@ -169,9 +67,6 @@
 
 .site-nav__item {
     position: relative;
-    // &:not(:first-child) {
-    //     margin-top: 32px;  
-    // }
 
     @include mq(tablet) {
         margin-bottom: 0px;
@@ -182,7 +77,7 @@
         
         &--current::after {
             position: absolute;
-            bottom: 0;
+            bottom: -1px;
             left: 0;
             content: "";
             display: block;
@@ -200,49 +95,21 @@
 }
 
 .site-nav__link {
-    display: flex;
+    position: relative;
+    display: none;
 
-    // padding-top: 48px;
-    padding-bottom: auto;
-    // margin-left: 40px;
-
+    padding-top: 32px;
+    padding-bottom: 32px;
+    margin: 0;
     
     font-weight: 500;
-    font-size: 40px;
-    line-height: 1.18px;
-    text-align: center;
-    letter-spacing: 0.02em;
-
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: var(--ls-second);
     text-decoration: none;
-
+        
     color: var(--nav-cl);
     transition: color var(--animation);
-
-    &:hover,
-    &:focus {
-        color: var(--accent-cl);
-    
-    }
-
-    &--current {
-    
-        color: var(--accent-cl);
-    }
-
-    @include mq(tablet) {
-        display: block;
-        padding-top: 32px;
-        padding-bottom: 32px;
-        margin: 0;
-    
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: var(--ls-second);
-        text-decoration: none;
-        
-        color: var(--nav-cl);
-        transition: color var(--animation);
     
         &:hover,
         &:focus {
@@ -259,13 +126,17 @@
         
             color: var(--accent-cl);
         }
+
+    @include mq(tablet) {
+        display: block;
+        
     }
     
-    @include mq(desktop) {
-        // padding-top: 32px;
-        // padding-bottom: 32px;
+    // @include mq(desktop) {
+    //     // padding-top: 32px;
+    //     // padding-bottom: 32px;
        
-    }
+    // }
 }
 
 
@@ -273,21 +144,9 @@
 /* Header Group */
 
 .header-group {
-    display: flex;
+    display: none;
     flex-direction: column-reverse;
     align-items: flex-start;
-    // margin-left: 40px;
-    margin-top: 302px;
-   
-
-
-    
-
-    
-    // padding: 0;
-    
-    // align-items: center;
-    // outline: 1px solid teal;
 
     @include mq(tablet) {
         display: flex;
@@ -297,12 +156,7 @@
         padding-bottom: 21px;
         
         margin-left: auto;
-        margin-top: 0;
-        
-        // padding-top: 21px;
-        // padding-bottom: 11px;
-        
-        
+
         align-items: stretch;
        
     }
@@ -331,14 +185,11 @@
     
     &:not(:last-child) {
         color: var(--accent-cl);
-        // margin-bottom: 32px;
+
     }
     
 
     @include mq(tablet) {
-        // margin: 0;
-        // padding: 0;
-
         display: flex;
 
         align-items: center;
@@ -346,18 +197,9 @@
         font-size: 12px;
         line-height: 1.17;
         letter-spacing: var(--ls-second);
-    
-    
-        
         transition: color var(--animation);
-        
 
-        // margin-bottom: 10px;
         color: var(--secondary-txt-cl);
-
-        // &:not(:last-child) {
-        //     margin-bottom: 10px;
-        // }
 
         &:hover,
         &:focus {
@@ -385,6 +227,7 @@
 }
 
 .header-group__item {
+
 
     @include mq(tablet) {
         
@@ -453,3 +296,164 @@
     }
 
 }
+
+// Mobile-menu
+
+.mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    padding: 48px 15px 48px 40px;
+    z-index: 999;
+  
+    display: flex;
+    flex-direction: column;
+  
+    transform: translateX(100%);
+    transition: transform 250ms ease-in;
+  
+    @media screen and (min-width: 768px) {
+      display: none;
+    }
+  }
+  
+  .mobile-menu.is-open {
+    transform: translateX(0);
+  }
+  
+  .menu-button--close,
+  .menu-button--open {
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  
+  .menu-button--close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+  
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+    &:hover,
+    &:focus {
+      fill: var(--accent-cl);
+    }
+  }
+  
+  .menu-button--open {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+  
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+    &:hover,
+    &:focus {
+      fill: var(--accent-cl);
+    }
+  
+    @media screen and (min-width: 768px) {
+      display: none;
+    }
+  }
+  
+  .mobile-menu__nav--item {
+    &:not(:last-child) {
+      margin-bottom: 32px;
+    }
+  }
+  
+  .mobile-menu__nav--link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+  
+    color: var(--main-txt-cl);
+  }
+  
+  .mobile-menu__nav--link.nav__link--active {
+    color: var(--accent-cl);
+  }
+  
+  .mobile-menu__contacts {
+    margin-top: auto;
+    margin-bottom: 64px;
+  }
+  
+  .mobile-menu__contacts--tel {
+    display: block;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+
+    text-decoration: none;
+  
+    margin-bottom: 32px;
+  
+    color: var(--accent-cl);
+  
+    @media screen and (max-width: 479px) {
+      font-size: calc(20px + 1vw);
+    }
+  }
+  
+  .mobile-menu__contacts--email {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+
+    text-decoration: none;
+  
+    color: var(--secondary-txt-cl);
+  }
+  
+  .mobile-menu__socials {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .mobile-menu__socials--item {
+    position: relative;
+  
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
+  }
+  
+  .mobile-menu__socials--link {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+
+    text-decoration: none;
+  
+    color: var(--accent-cl);
+  
+    @media screen and (min-width: 480px) {
+      font-size: 18px;
+    }
+  
+    .mobile-menu__socials--item:not(:last-child) &::after {
+      background-color: rgba(33, 33, 33, 0.2);
+    }
+  
+    &::after {
+      content: " ";
+      position: absolute;
+      width: 1px;
+      height: 22px;
+      margin-left: 10px;
+    }
+  }
